meja/tests/list_wrong_type.stderr
File "tests/list_wrong_type.meja", line 1, characters 8-17:
Error: Incompatable types '_' and 'int list':
Cannot unify 'bool' and 'int'.

