meja/tests/list_wrong_type.meja
let x = [1, 2, 3];

let y = true :: x;
